--- a/React-Chat/src/Register.css
+++ b/React-Chat/src/Register.css
@@ -1,4 +1,4 @@
-.Login {
+.Register {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,7 +34,7 @@
     justify-content: center;
   }
   
-  .login-form {
+  .Register-form {
     /*background-color: white;*/
     padding: 2rem;
     /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
